--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0"
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/user-event": "14.2.0",
+    "@testing-library/react": "^13.4.0",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1"
   }
 }
