--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,6 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  build_and_test: # This is the name of the workflow, feel free to change it to better match your workflow.
+  build_and_test: 
     jobs:
       - build_and_test
