--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,40 @@ services:
           - .:/testing-webapp
       ports:
         - 3003:3003
+  
+    mongo:
+      image: mongo
+      restart: always
+      ports: 
+        - 27017:27017
+      environment:
+        MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-root}
+        MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSOWORD:-P@ssw00rd!}
+      networks:
+        - backend
+
+    backend:
+      image: testing-webapp-server
+      restart: always
+      build:
+        context: ./server
+        dockerfile: ./Dockerfile
+      command: dev
+      ports: 
+        - 5000:5000
+      volumes:
+        - ./server:/app
+      environment:
+        MONGO_USERNAME: ${MONGO_USERNAME:-root}
+        MONGO_PASSOWORD: ${MONGO_PASSOWORD:-P@ssw00rd!}
+        MONGO_HOST: ${MONGO_HOST:-mongo}
+        MONGO_PORT: ${MONGO_PORT:-27017}
+        MONGO_DATABASE: ${MONGO_DATABASE:-test_execution_result}
+        API_KEY_BB: ${API_KEY_BB:-asudbq827ebsadon}
+      depends_on:
+        - mongo
+      networks:
+        - backend
+
+networks:
+  backend:
