--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,11 @@
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
-    "streamifier": "^0.1.1"
-  },
-  "devDependencies": {
+    "streamifier": "^0.1.1",
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon -L server.js",
     "prod": "node server.js"
   }
 }
