--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
         MONGO_PORT: ${MONGO_PORT:-27017}
         MONGO_DATABASE: ${MONGO_DATABASE:-test_execution_result}
         API_KEY_BB: ${API_KEY_BB:-asudbq827ebsadon}
+        PORT: ${BACKEND_PORT:-5000}
       depends_on:
         - mongo
       networks:
