--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
     mongo:
       image: mongo
       restart: always
-      ports: 
-        - 27017:27017
+      # DB Ports not exposed by default.
+      # ports: 
+      #   - 27017:27017
+      volumes:
+        - mongoData:/data/db
       environment:
         MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-root}
         MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSOWORD:-P@ssw00rd!}
@@ -44,3 +47,6 @@ services:
 
 networks:
   backend:
+
+volumes:
+  mongoData:
