--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,11 @@
     "dotenv": "^16.0.3",
     "eslint-config": "^0.3.0",
     "express": "^4.18.2",
+    "jsonschema": "^1.4.1",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
-    "streamifier": "^0.1.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "streamifier": "^0.1.1"
   },
   "scripts": {
     "dev": "nodemon -L server.js",
