--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-intl": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "eslint": "^8.29.0",
@@ -28,14 +29,15 @@
     "eslint-plugin-sort-exports": "^0.8.0",
     "next": "13.0.6",
     "prettier": "^2.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-intl": "^6.2.7",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/user-event": "14.2.0",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "14.2.0",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1"
   }
