--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start -p 3003",
     "lint": "next lint",
     "test": "jest",
-    "test-live": "jest --watch"
+    "test-live": "jest --watch",
+    "less": "less-watch-compiler"
   },
   "dependencies": {
     "@types/node": "18.11.11",
@@ -26,6 +27,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-exports": "^0.8.0",
+    "less": "^4.1.3",
+    "less-watch-compiler": "^1.16.3",
     "next": "13.0.6",
     "prettier": "^2.8.1",
     "react": "18.2.0",
@@ -34,8 +37,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/user-event": "14.2.0",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "14.2.0",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1"
   }
