TECH-273: Fix less config with next.js, moved variables and extends styles to separate files

--- a/less-watch-compiler.config.json
+++ b/less-watch-compiler.config.json
@@ -1,9 +1,8 @@
 {
-    "watchFolder": "styles",
-    "outputFolder": "styles",
-    "includeHidden": false,
-    "sourceMap": false,
-    "runOnce": false,
-    "enableJs": true,
-    "minified":false
+  "watchFolder": "styles/less",
+  "includeHidden": false,
+  "sourceMap": false,
+  "runOnce": false,
+  "enableJs": true,
+  "minified": false
 }
