--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-exports": "^0.8.0",
     "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "less-watch-compiler": "^1.16.3",
     "next": "13.0.6",
+    "next-compose-plugins": "^2.2.1",
+    "next-with-less": "^2.0.5",
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
