TECH-303: Added endpoint for fetching report data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       image: mongo
       restart: always
       # DB Ports not exposed by default.
-      # ports: 
-      #   - 27017:27017
+      ports: 
+        - 27000:27017
       volumes:
         - mongoData:/data/db
       environment:
