--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "express": "^4.18.2",
     "jsonschema": "^1.4.1",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.9.1",
+    "mongoose-gen": "^2.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "streamifier": "^0.1.1"
