--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,4 @@ MONGO_PORT=27017
 MONGO_DATABASE=test_execution_result
 API_KEY_BB=asudbq827ebsadon
 PORT=5000
+MONGO_CONNECTION_OPTIONS='maxPoolSize=20&w=majority'
