--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "less": "less-watch-compiler"
   },
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -31,6 +32,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "less-watch-compiler": "^1.16.3",
+    "lodash.debounce": "^4.0.8",
     "next": "13.0.6",
     "next-compose-plugins": "^2.2.1",
     "next-with-less": "^2.0.5",
