--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,12 +3,9 @@ FROM node:16
 # Create app directory
 WORKDIR /app
 
-COPY package*.json ./
-COPY yarn.lock ./
-COPY entrypoint.sh ./
+COPY . .
 
 RUN yarn install
 
-COPY . ./app
 EXPOSE 5000
 ENTRYPOINT ["/app/entrypoint.sh"]
