--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mongoose-gen": "^2.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.4",
     "streamifier": "^0.1.1"
   },
   "scripts": {
