--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "less": "less-watch-compiler"
   },
   "dependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
@@ -19,6 +20,7 @@
     "@types/react-intl": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
+    "classnames": "^2.3.2",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13.0.6",
     "eslint-config-prettier": "^8.5.0",
