--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intl": "^6.2.7",
+    "react-markdown": "^8.0.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
