--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-infinite-scroll-component": "^5.0.0",
     "@types/react-intl": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
@@ -42,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intl": "^6.2.7",
     "react-markdown": "^8.0.5",
     "typescript": "4.9.4"
