--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.0.9",
     "@types/react-infinite-scroll-component": "^5.0.0",
     "@types/react-intl": "^3.0.0",
+    "@types/react-tooltip": "^4.2.4",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "classnames": "^2.3.2",
@@ -46,6 +47,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-intl": "^6.2.7",
     "react-markdown": "^8.0.5",
+    "react-tooltip": "^5.10.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
