--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,23 @@ jobs:
       - run:
           command: yarn test
           name: Run YARN tests
+  deploy:
+    steps:
+      - run:
+          command: bash deployment/deploy.sh
+          name: Deploy to test server
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  build_and_test: 
+  build_test_deploy:
     jobs:
       - build_and_test
+      - deploy:
+           requires:
+             - test
+           filters:
+             branches:
+               only:
+                 - main
+
