TECH-454: Add missing Docker image to the deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
           command: yarn test
           name: Run YARN tests
   deploy:
+    docker:
+      - image: cimg/base
     steps:
       - run:
           command: bash deployment/deploy.sh
