--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ workflows:
       - build_and_test
       - deploy:
            requires:
-             - test
+             - build_and_test
            filters:
              branches:
                only:
