--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           name: Run YARN tests
   deploy:
     docker:
-      - image: cimg/base
+      - image: cimg/base:2023.03
     steps:
       - run:
           command: bash deployment/deploy.sh
