--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
     docker:
       - image: cimg/base:2023.03
     steps:
+      - checkout
       - run:
           command: bash deployment/deploy.sh
           name: Deploy to test server
