--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs:
       - image: cimg/base:2023.03
     steps:
       - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:Pif9TBswveMCEOCwswNicR42jp6oTb3/YXG7HoJ5GkU"
       - run:
           command: bash deployment/deploy.sh
           name: Deploy to test server
