--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,13 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "supertest": "^6.3.3"
   },
   "scripts": {
     "dev": "nodemon -L server.js",
-    "prod": "node server.js"
+    "prod": "node server.js",
+    "test": "jest --forceExit"
   },
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^29.5.0"
   }
 }
