--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@types/react-infinite-scroll-component": "^5.0.0",
     "@types/react-intl": "^3.0.0",
     "@types/react-tooltip": "^4.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "classnames": "^2.3.2",
-    "eslint": "^8.29.0",
+    "eslint": "^8.37.0",
     "eslint-config-next": "^13.0.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -48,7 +48,7 @@
     "react-intl": "^6.2.7",
     "react-markdown": "^8.0.5",
     "react-tooltip": "^5.10.0",
-    "typescript": "4.9.4"
+    "typescript": "^5.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
