TECH-514: Added autocomplite search input

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-intl": "^6.2.7",
     "react-markdown": "^8.0.5",
+    "react-select": "^5.7.2",
     "react-tooltip": "^5.10.0",
     "typescript": "^5.0.3"
   },
