--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.0.3",
     "eslint-config": "^0.3.0",
     "express": "^4.18.2",
+    "js-yaml": "^4.1.0",
     "jsonschema": "^1.4.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.1",
