--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ services:
     web:
       build: .
       ports:
-        - 89:3003
-
+        - 80:3003
+  
     mongo:
       image: mongo
       restart: always
       # DB Ports not exposed by default.
-      ports:
-        - 29017:27017
+      # ports: 
+      #   - 27017:27017
       volumes:
         - mongoData:/data/db
       environment:
@@ -26,7 +26,7 @@ services:
         context: ./server
         dockerfile: ./Dockerfile
       command: dev
-      ports:
+      ports: 
         - 5000:5000
       environment:
         MONGO_USERNAME: ${MONGO_USERNAME:-root}
