--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "@cucumber/json-to-messages": "^10.0.0",
     "@vpriem/express-api-key-auth": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -11,6 +12,7 @@
     "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "jsonschema": "^1.4.1",
+    "memorystream": "^0.3.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.1",
     "mongoose-gen": "^2.1.1",
