--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ version: '3'
 services:
     web:
       build: .
-      ports:
-        - 80:3003
+      expose:
+        - "3003"
+      environment:
+        VIRTUAL_HOST: testing.govstack.global
+        LETSENCRYPT_HOST: testing.govstack.global
 
     mongo:
       image: mongo
@@ -40,43 +43,6 @@ services:
         - mongo
       networks:
         - backend
-
-    nginx:
-      container_name: nginx
-      image: nginxproxy/nginx-proxy
-      restart: unless-stopped
-      ports:
-        - 80:80
-        - 443:443
-      volumes:
-        - /var/run/docker.sock:/tmp/docker.sock:ro
-        - /var/docker/nginx/html:/usr/share/nginx/html
-        - /var/docker/nginx/certs:/etc/nginx/certs
-        - /var/docker/nginx/vhost:/etc/nginx/vhost.d
-      logging:
-        options:
-          max-size: "10m"
-          max-file: "3"
-
-    letsencrypt-companion:
-      container_name: letsencrypt-companion
-      image: jrcs/letsencrypt-nginx-proxy-companion
-      restart: unless-stopped
-      volumes:
-        - /var/docker/nginx/html:/usr/share/nginx/html
-        - /var/docker/nginx/certs:/etc/nginx/certs
-        - /var/docker/nginx/vhost:/etc/nginx/vhost.d
-        - /var/run/docker.sock:/var/run/docker.sock
-        - /var/docker/nginx/acme:/etc/acme.sh
-
-    hello-world:
-      container_name: hello-world
-      image: kornkitti/express-hello-world
-      expose:
-        - "8080"
-      environment:
-        VIRTUAL_HOST: test.programonaut.com
-        LETSENCRYPT_HOST: test.programonaut.com
 
 networks:
   backend:
