--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,3 +29,6 @@ services:
       - /var/docker/nginx/vhost:/etc/nginx/vhost.d
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/docker/nginx/acme:/etc/acme.sh
+    environment:
+      NGINX_PROXY_CONTAINER: 'nginx'
+
