--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "less-watch-compiler": "^1.16.3",
+    "loadash": "^1.0.0",
     "lodash.debounce": "^4.0.8",
     "next": "13.0.6",
     "next-compose-plugins": "^2.2.1",
@@ -49,7 +50,9 @@
     "react-markdown": "^8.0.5",
     "react-select": "^5.7.2",
     "react-tooltip": "^5.10.0",
-    "typescript": "^5.0.3"
+    "terser-webpack-plugin": "^4.2.3",
+    "typescript": "^5.0.3",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
