--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,9 @@ jobs:
       - run:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              bash deployment/deploy.sh
+              bash deployment/deploy.sh prod
             elif [ "${CIRCLE_BRANCH}" == "development" ]; then
-              bash deployment/deploy.sh
+              bash deployment/deploy.sh staging
             fi
           name: Deploy based on branch
 
