--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: Setup SSH Config
       - run:
           command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+            if [ "${CIRCLE_BRANCH}" == "main" ]; then
               ssh-keyscan prod-server >> ~/.ssh/known_hosts
             elif [ "${CIRCLE_BRANCH}" == "development" ]; then
               ssh-keyscan staging-server >> ~/.ssh/known_hosts
@@ -42,7 +42,7 @@ jobs:
           name: Add known host for SSH
       - run:
           command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+            if [ "${CIRCLE_BRANCH}" == "main" ]; then
               bash deployment/deploy.sh prod
             elif [ "${CIRCLE_BRANCH}" == "development" ]; then
               bash deployment/deploy.sh staging
@@ -59,5 +59,5 @@ workflows:
            filters:
              branches:
                only:
-                 - master
+                 - main
                  - development
