--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,10 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
+          # These keys come from the CircleCI App. Projects Settings -> SSH - Keys -> Additional SSH Keys.
+          # The fingerprint will show up after adding a key.
           fingerprints:
             - "d1:b2:46:4e:a2:e8:3b:10:0b:49:78:06:fa:92:25:52"
-            # Add your new test server's SSH fingerprint here
             - "0a:51:56:fd:81:33:42:19:7d:59:13:af:43:1f:cf:1e"
       - run:
           command: cp ./ssh-config ~/.ssh/config
