Fix branch name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,4 +58,4 @@ workflows:
              branches:
                only:
                  - main
-                 - development
+                 - develop
