Fix branch name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
               ssh-keyscan testing.govstack.global >> ~/.ssh/known_hosts
-            elif [ "${CIRCLE_BRANCH}" == "development" ]; then
+            elif [ "${CIRCLE_BRANCH}" == "develop" ]; then
               ssh-keyscan staging.testing.govstack.global >> ~/.ssh/known_hosts
             fi
           name: Add known host for SSH
@@ -42,7 +42,7 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
               bash deployment/deploy.sh prod
-            elif [ "${CIRCLE_BRANCH}" == "development" ]; then
+            elif [ "${CIRCLE_BRANCH}" == "develop" ]; then
               bash deployment/deploy.sh staging
             fi
           name: Deploy based on branch
