--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,4 +31,15 @@ services:
       - /var/docker/nginx/acme:/etc/acme.sh
     environment:
       NGINX_PROXY_CONTAINER: 'nginx'
+      
+  web:
+    environment:
+        VIRTUAL_HOST: testing.govstack.global
+        LETSENCRYPT_HOST: testing.govstack.global
+
+  backend:
+    environment:
+        API_KEY_BB: ${API_KEY_BB:-asudbq827ebsadon}
+        VIRTUAL_HOST: api.testing.govstack.global
+        LETSENCRYPT_HOST: api.testing.govstack.global
 
