--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,6 +36,7 @@ services:
     environment:
         VIRTUAL_HOST: testing.govstack.global
         LETSENCRYPT_HOST: testing.govstack.global
+        API_URL: api.testing.govstack.global
 
   backend:
     environment:
