--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@cucumber/json-to-messages": "^10.0.0",
     "@vpriem/express-api-key-auth": "^1.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "eslint-config": "^0.3.0",
     "express": "^4.18.2",
@@ -23,11 +24,19 @@
     "supertest": "^6.3.3"
   },
   "scripts": {
-    "dev": "nodemon -L server.js",
-    "prod": "node server.js",
+    "dev": "nodemon -L server.ts",
+    "prod": "node server.ts",
     "test": "jest --forceExit"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/js-yaml": "^4.0.6",
+    "@types/memorystream": "^0.3.2",
+    "@types/multer": "^1.4.8",
+    "@types/node": "^20.7.1",
+    "@types/streamifier": "^0.1.0",
+    "@types/supertest": "^2.0.13",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -35,6 +44,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
