--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
     web:
-      build: .
+      build:
+        context: ./forntend
+        dockerfile: ./Dockerfile
       ports:
         - 3003:3003
       environment:
