--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   web:
     volumes:
-      - .:/testing-webapp
-      - ./testing-webapp/node_modules
+      - .:/testing-webapp/frontend
+      - ./testing-webapp/frontend/node_modules
     ports:
       - 3003:3003
 
