TECH-875: Changed server folder name to backend, updated docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       image: testing-webapp-server
       restart: always
       build:
-        context: ./server
+        context: ./backend
         dockerfile: ./Dockerfile
       command: dev
       expose:
