--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
     web:
       build:
-        context: ./forntend
+        context: ./frontend
         dockerfile: ./Dockerfile
       ports:
         - 3003:3003
