Expose mongo port in staging (locally)

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -43,3 +43,8 @@ services:
         API_KEY_BB: ${API_KEY_BB:-O7VKGLW47I6e}
         VIRTUAL_HOST: api.staging.testing.govstack.global
         LETSENCRYPT_HOST: api.staging.testing.govstack.global
+
+  mongo:
+    ports:
+      - 27017:27017
+
