--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-exports": "^0.8.0",
+    "express-rate-limit": "^7.1.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "less-watch-compiler": "^1.16.3",
